--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="utility.css">
     <link rel="stylesheet" href="style.css">
+    <!-- link for google font icons -->
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Portfolio - Web Developer</title>
 </head>
 
@@ -20,20 +23,31 @@
     <div class="container1 flex">
 
         <div class="left ">
-            <div class="home bg-grey rounded border">
-
+            <div class="home bg-grey rounded">
+                <div class="homeImage border">
+                    <img src="images/me.jpg" alt="">
+                </div>
+                <div class="homeContent">
+                    <div class="haddingname"> <span>Name :- </span> Ankush Gupta</div>
+                    <div class="nameBranch"> CSE - AI&DS</div>
+                    <div class="collegeHadding">SISTec GN</div>
+                </div>
             </div>
-            <div class="library bg-grey rounded border">
 
+            <div class="library bg-grey rounded ">
+                <h2 class="libraryHadding">Skills</h2>
                 <div class="tectSkills">
-                    <h3>Tech :- Skills</h3>
+                    <h4>Technical Skills</h4>
                     <div class="buttonSkills">
-                        <div class="container text-center">
+                        <!-- <div class="container text-center"> -->
+                        <div class="container px-2">
                             <div class="row row-cols-2">
-                                <div class="col">Column</div>
-                                <div class="col">Column</div>
-                                <div class="col">Column</div>
-                                <div class="col">Column</div>
+                                <div class="col">React JS</div>
+                                <div class="col">Next JS</div>
+                                <div class="col">Django</div>
+                                <div class="col">Python</div>
+                                <div class="col">JavaScript</div>
+                                <div class="col">C and C++</div>
                             </div>
                         </div>
                     </div>
@@ -41,14 +55,15 @@
 
                 <div class="commonSkills">
                     <div class="buttonCommon">
-                        <h3>Hobbies and Skills </h3>
+                        <h4> My Hobbies </h4>
                         <div class="buttonCommunication">
-                            <div class="container text-center">
+                            <!-- <div class="container text-center"> -->
+                            <div class="container px-2">
                                 <div class="row row-cols-2">
-                                    <div class="col">Column</div>
-                                    <div class="col">Column</div>
-                                    <div class="col">Column</div>
-                                    <div class="col">Column</div>
+                                    <div class="col">Communication</div>
+                                    <div class="col">Problem Solving</div>
+                                    <div class="col">Team Work</div>
+                                    <div class="col">Time Manage...</div>
                                 </div>
                             </div>
                         </div>
@@ -57,12 +72,12 @@
                 </div>
 
                 <div class="languSkills">
-                    <h3>Languages :- Knows </h3>
+                    <h4>Languages Knowns </h4>
                     <div class="buttonCommunication">
                         <div class="container text-center">
                             <div class="row row-cols-2">
-                                <div class="col">Column</div>
-                                <div class="col">Column</div>
+                                <div class="col">Hindi</div>
+                                <div class="col">English</div>
                             </div>
                         </div>
                     </div>
@@ -71,18 +86,18 @@
 
                 <div class="dowlCv">
 
-                    <a href="images/me.jpg" download="me.jpg"><button type="button"
+                    <a href="images/download/Resume[1].pdf" download="Resume[1].pdf"><button type="button"
                             class="btn btn-primary buttonCv">DownloadCV</button></a>
                 </div>
 
             </div>
         </div>
 
-        <div class="rigth bg-grey rounded  border m-1">
+        <div class="rigth bg-grey rounded m-1">
             <header>
                 <nav>
                     <div class="leftNav"><span><img class="logoPort" src="images/logo1.png" alt=""></span> My-Awesome
-                        Porfolio
+                        <span class="Porfoliohead">Porfolio</span>
                     </div>
                     <div class="rightNav">
                         <ul>
@@ -106,13 +121,26 @@
                 </nav>
             </header>
 
-            <div class="proFile border flex">
+            <div class="proFile  flex">
                 <div class="leftProfile">
                     Hii, My name is <span class="purple"> Ankush </span>
                     <div>And I am a passionate</div>
                     <span id="element"></span>
                     <!-- <div class="resume-button"><button>Hire Me</button></div> -->
-                    <div class=""><button type="button" class="btn btn-success resume-button">Hire Me</button></div>
+                    <div class="socilMedia">
+                        <div class="mediaIcons">
+                            <img class="invert" width="70" height="70" src="images/icons8-github-128.png" alt="">
+                            <img  width="60" height="60" src="images/icons8-instagram-100.png" alt="">
+                            <img class="invert" width="50" height="50" src="images/icons8-twitter-128.png" alt="">
+                            <img class="invert" width="50" height="50" src="images/icons8-linkedin-100.png" alt="">
+                            <!-- <img src="" alt="">
+                            <img src="" alt="">
+                            <img src="" alt="">
+                            <img src="" alt=""> -->
+                        </div>
+                        <div class=""><button type="button" class="btn btn-primary resume-button"
+                                onclick="download()">Hire Me</button></div>
+                    </div>
                 </div>
 
                 <div class="rightProfile flex flex-col">
@@ -120,23 +148,233 @@
                         <!-- <img src="images/me.jpg" alt=""> -->
                     </div>
                     <div class="profileContent ">
-                        <span class="sistec1">Attended</span>
-                        <span class="sistec2">Sagar Institutions Group of Institutions - SISTec</span>
+                        <!-- <span class="sistec1">Attended</span> -->
+                        <span class="sistec2"> Sagar Institutions Group of Institutions - SISTec</span>
                     </div>
                 </div>
 
             </div>
+
+
+
+            <div class="spacilities">
+                <div class="spacilitiesContent">
+                    <span class="spacilitiesSpan1">Some Project and Documentation</span>
+                    <span class="spacilitiesSpan2">These are the Spacilities and also You can Suggesh me For
+                        Collaboration any Project
+                        If Have any in Your Mind.</span>
+                </div>
+                <div class="spacilitiesContainer flex">
+                    <div class="spacilitiesField  commonBox ">
+                        <div class="projectImage">
+                            <img src="images/project.png" alt="">
+                        </div>
+                        <div class="projectContent flex flex-col">
+
+                            <!-- <span>Project Completed</span> -->
+                            <span> Web Development</span>
+                            <button type="button" class="btn btn-info buttonCv">View More</button>
+                        </div>
+                    </div>
+
+                    <div class="spacilitiesField  commonBox ">
+                        <div class="projectImage">
+                            <img src="images/development.png" alt="">
+                        </div>
+                        <div class="projectContent flex flex-col">
+                            <!-- <span>Project Completed</span> -->
+                            <span>Documents</span>
+                            <button type="button" class="btn btn-info buttonCv">View More</button>
+                        </div>
+                    </div>
+
+                    <div class="spacilitiesField  commonBox ">
+                        <div class="projectImage">
+                            <img width="100" src="images/document.png" alt="">
+                        </div>
+                        <div class="projectContent flex flex-col">
+                            <span>Project</span>
+                            <button type="button" class="btn btn-info buttonCv">View More</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+
         </div>
 
     </div>
 
-    <div class="spacilities">
-        <h3></h3>
-        <div>
-            <span></span>
-            <span></span>
+
+
+    <!-- Contect Pages -->
+    <div class="container3 rounded">
+        <h1>Contect Me</h1>
+        <hr>
+        <div class="contectPage">
+
+            <div class="contectLeft">
+                <img src="images/contect5.gif" alt="">
+            </div>
+            <div class="contectRight">
+                <div class="contectContent">
+                    <div>Looks like you need some help!!!</div>
+                    <h2>Reach Out!</h2>
+                    <div>I usually within hour, but developer do sleep four to five hours a night, so it might take a
+                        bit
+                        longer. Thank you and I am Looking to hearing from you.</div>
+                </div>
+
+                <div class="contectForm">
+                    <form action="/" method="post">
+                        <div class="contectInput flex flex-col">
+                            <label for="username">Name </label>
+                            <input type="text" id="username" name="username" placeholder="John Doe">
+                        </div>
+                        <div class="contectInput flex flex-col">
+                            <label for="useremail">Email Address </label>
+                            <input type="email" id="useremail" name="useremail" placeholder="example@mail.com">
+                        </div>
+                        <div class="contectInput flex flex-col">
+                            <label for="usermessage">Message </label>
+                            <textarea name="usermessage" id="usermessage" cols="25" rows="5" placeholder="Write Your Message!!!"></textarea>
+                        </div>
+                        <div class="contectInput flex flex-col" >
+                            <button type="button" class="btn btn-info">Submit</button>
+                            <!-- <button>Submit</button> -->
+                        </div>
+                    </form>
+                </div>
+
+            </div>
         </div>
     </div>
+
+    <!-- future skills -->
+
+    <div class="container2 rounded">
+        <section class="secondSection">
+            <span class="text-gray">My Future Achievement</span>
+            <h1>Future Goal</h1>
+            <div class="box">
+                <div class="vertical">
+                    <img src="images/icons8-working-with-a-laptop-80.png" class="image-top" alt="">
+                    <div class="vertical-tittle">
+                        HTML Developer (2023-2024)
+                    </div>
+                    <div class="vertical-desc">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio iusto quos placeat dolor
+                        similique obcaecati animi quo quia consequatur, possimus minima ea qui!
+                    </div>
+                </div>
+                <div class="vertical">
+                    <img src="images/icons8-working-with-a-laptop-80.png" class="image-top" alt="">
+                    <div class="vertical-tittle">
+                        HTML Developer (2023-2024)
+                    </div>
+                    <div class="vertical-desc">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio iusto quos placeat dolor
+                        similique obcaecati animi quo quia consequatur, possimus minima ea qui!
+                    </div>
+                </div>
+                <div class="vertical">
+                    <img src="images/icons8-working-with-a-laptop-80.png" class="image-top" alt="">
+                    <div class="vertical-tittle">
+                        HTML Developer (2023-2024)
+                    </div>
+                    <div class="vertical-desc">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio iusto quos placeat dolor
+                        similique obcaecati animi quo quia consequatur, possimus minima ea qui!
+                    </div>
+                </div>
+                <div class="vertical">
+                    <img src="images/icons8-working-with-a-laptop-80.png" class="image-top" alt="">
+                    <div class="vertical-tittle">
+                        HTML Developer (2023-2024)
+                    </div>
+                    <div class="vertical-desc">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio iusto quos placeat dolor
+                        similique obcaecati animi quo quia consequatur, possimus minima ea qui!
+                    </div>
+                </div>
+                <div class="vertical">
+                    <img src="images/icons8-working-with-a-laptop-80.png" class="image-top" alt="">
+                    <div class="vertical-tittle">
+                        HTML Developer (2023-2024)
+                    </div>
+                    <div class="vertical-desc">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio iusto quos placeat dolor
+                        similique obcaecati animi quo quia consequatur, possimus minima ea qui!
+                    </div>
+                </div>
+                <div class="vertical">
+                    <img src="images/icons8-working-with-a-laptop-80.png" class="image-top" alt="">
+                    <div class="vertical-tittle">
+                        HTML Developer (2023-2024)
+                    </div>
+                    <div class="vertical-desc">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio iusto quos placeat dolor
+                        similique obcaecati animi quo quia consequatur, possimus minima ea qui!
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+
+
+
+
+
+    <footer>
+        <div class="footer">
+            <div class="footer-first">
+                <h3>Ankush's Developer</h3>
+                <h3> Portfolio</h3>
+            </div>
+
+            <div class="footerGrid">
+                <div class="footer-second">
+                    <ul>
+                        <li>Home</li>
+                        <li>About</li>
+                        <li>Services</li>
+                        <li>Contact</li>
+                    </ul>
+                </div>
+                <div class="footer-third">
+                    <ul>
+                        <li>Home</li>
+                        <li>About</li>
+                        <li>Services</li>
+                        <li>Contact</li>
+                    </ul>
+                </div>
+                <div class="footer-fourth">
+                    <ul>
+                        <li>Home</li>
+                        <li>About</li>
+                        <li>Services</li>
+                        <li>Contact</li>
+                    </ul>
+                </div>
+                <div class="footer-fourth">
+                    <ul>
+                        <li>Home</li>
+                        <li>About</li>
+                        <li>Services</li>
+                        <li>Contact</li>
+                    </ul>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="footer-text-rights">
+            ankushsportfolio.com | All rights reserved
+        </div>
+    </footer>
+
 
 
 
@@ -151,7 +389,7 @@
     <script>
 
         function download() {
-            window.location = 'resume/Resume.pdf';
+            window.location = 'images/download/Resume[1].pdf';
         }
 
 
